syntax = "proto3";
package vco.schemas;
message Reply {
  string schema = 1;
  bytes parent_cid = 2;
  string content = 3;
  repeated bytes media_cids = 4;
  int64 timestamp_ms = 5;
  string channel_id = 6;
  repeated string tags = 7;
}
